Created visual odometry

--- a/config/config.ini
+++ b/config/config.ini
@@ -326,7 +326,7 @@ Odom\FillInfoData=true
 Odom\FilteringStrategy=0
 Odom\GuessMotion=true
 Odom\GuessSmoothingDelay=0
-Odom\Holonomic=true
+Odom\Holonomic=false
 Odom\ImageBufferSize=1
 Odom\ImageDecimation=1
 Odom\KalmanMeasurementNoise=0.01
@@ -339,12 +339,12 @@ Odom\ParticleNoiseT=0.002
 Odom\ParticleSize=400
 Odom\ResetCountdown=0
 Odom\ScanKeyFrameThr=0.9
-Odom\Strategy=0
+Odom\Strategy=1
 Odom\VisKeyFrameThr=150
 OdomF2M\BundleAdjustment=1
 OdomF2M\BundleAdjustmentMaxFrames=10
 OdomF2M\MaxNewFeatures=0
-OdomF2M\MaxSize=2000
+OdomF2M\MaxSize=1000
 OdomF2M\ScanMaxSize=2000
 OdomF2M\ScanRange=0
 OdomF2M\ScanSubtractAngle=45
@@ -572,7 +572,7 @@ Vis\CorGuessMatchToProjection=false
 Vis\CorGuessWinSize=20
 Vis\CorNNDR=0.8
 Vis\CorNNType=1
-Vis\CorType=0
+Vis\CorType=1
 Vis\DepthAsMask=true
 Vis\EpipolarGeometryVar=0.1
 Vis\EstimationType=1
@@ -583,7 +583,7 @@ Vis\GridRows=1
 Vis\InlierDistance=0.1
 Vis\Iterations=300
 Vis\MaxDepth=0
-Vis\MaxFeatures=1000
+Vis\MaxFeatures=600
 Vis\MeanInliersDistance=0.0
 Vis\MinDepth=0
 Vis\MinInliers=20
