Lunedi mattina, enza e iris

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -164,6 +164,7 @@ include_directories(
 catkin_install_python(PROGRAMS
   src/vo_sender.py
   src/data_fused_receiver.py
+  src/quat2eul_converter.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
